centered add to cart when logged out

--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@
               <button name="add_to_cart" value={{product['id']}}>Add To Cart</button>
             </form></td>
           {% else %}
-            <td><form action='/login' >
+            <td style="text-align:center"><form action='/login' >
               <button>Add To Cart</button>
             </form></td>
           {% endif %}
